--- a/deep-learning.html
+++ b/deep-learning.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/osxDafww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/osxDafww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Software Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -71,7 +71,7 @@
 Natural Language Processing to join us in our commitment to improve the quality 
 of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-in-computer-visionmedical-imaging'>Senior AI Scientist - Deep Learning in Computer Vision/Medical ...</a></h5> 
+<h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-in-computer-visionmedical-imaging'>Senior AI Scientist - Deep Learning in Computer Vision/Medical ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... We are looking for a talented Senior AI Scientist with a focus on Deep Learning 
 and Computer Vision to join us in our commitment to improve the quality of care?...</p>
@@ -142,7 +142,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865233-senior-back-end-engineer-deep-learning-infrastructure-'>Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865233-senior-back-end-engineer-deep-learning-infrastructure-'>Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -202,7 +202,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -210,7 +210,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Speech and Language Processing)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -231,11 +231,11 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://samasource.applytojob.com/apply/zg64yWYMZM/Head-Of-Artificial-Intelligence-And-Deep-Learning'>Head of Artificial Intelligence and Deep Learning - Samasource - Career Page</a></h5> 
+<h5><a href='http://samasource.applytojob.com/apply/zg64yWYMZM/Head-Of-Artificial-Intelligence-And-Deep-Learning'>Head of Artificial Intelligence and Deep Learning - Samasource - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aeratechnology/0ddb6955-95c5-4b06-a34c-43cf9b8fd3e3'>Aera Technology - Senior Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/0ddb6955-95c5-4b06-a34c-43cf9b8fd3e3'>Aera Technology - Senior Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -253,7 +253,7 @@ text?...</p>
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/sensors-systems-engineer-with-machine-and-deep-learning-focus-6321'>Sensors Systems Engineer with Machine and Deep Learning Focus - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/sensors-systems-engineer-with-machine-and-deep-learning-focus-6321'>Sensors Systems Engineer with Machine and Deep Learning Focus - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -302,7 +302,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-05</p>
 <hr/>
@@ -352,11 +352,11 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Hsinchu</span></p>
 <p>Posted on: 2019-05-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4286159002'>Job Application for Deep Learning or ML Research Engineer at Iris Automation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4286159002'>Job Application for Deep Learning or ML Research Engineer at Iris Automation</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -408,7 +408,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://hermes-microvision.workable.com/j/FD61D7F374'>Hermes-Microvision - Jobs: Machine Learning/Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hermes-microvision.workable.com/j/FD61D7F374'>Hermes-Microvision - Jobs: Machine Learning/Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -432,7 +432,7 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
